--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "sentismile",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^2.9.0"
-  }
+    "name": "sentismile",
+    "private": true,
+    "version": "0.0.0",
+    "author": {
+        "name": "Jonas Deipenbrock",
+        "email": "jonas@deipenbrock.dev"
+    },
+    "description": "Simple website showcasing language input and sentiment analysis",
+    "keywords": [
+        "website",
+        "language",
+        "sentiment",
+        "voice"
+    ],
+    "homepage": "TODO",
+    "license": "MIT",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "vite": "^2.9.0"
+    }
 }
